# cursed-drums

./: CMakeLists.txt
include/: cursed_engine.h  sequencer.h
src/: cursed_engine.cpp  main.cpp  sequencer.cpp
